--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">GPS data logger</string>
+    <string name="location">Location:</string>
+    <string name="azimuth">Azimuth:</string>
+    <string name="dateTime">Date/Time:</string>
+    <string name="newFileAlertDialogMessage">Enter new file name</string>
+    <string name="create">create</string>
+    <string name="compassUseGuide">For best results with the compass: \n
+        1. Use parallel to the ground. \n
+        2. Use outside and away from metal objects. \n
+        3. Move horizontally in a figure 8 pattern to calibrate. \n
+        4. Hold steady for 10-20 secs, and allow azimuth to settle before logging. </string>
+    <string name="fileexists">File already exists</string>
+    <string name="extStorageUnavailable">External storage is not available</string>
 </resources>
