--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="azimuth">Azimuth:</string>
     <string name="dateTime">Date/Time:</string>
     <string name="newFileAlertDialogMessage">Enter new file name</string>
-    <string name="enterNoteAlertDialogMessage">Enter note to add to log,\nnote will be added after last logged event.</string>
+    <string name="enterNoteAlertDialogMessage">Enter note to add to log,\nnote will be added after last logged event.\n
+    Provide event DTG.</string>
     <string name="create">create</string>
     <string name="compassUseGuide">For best results with the compass: \n
         1. Use parallel to the ground. \n
