--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="event">*event*</string>
     <string name="operator_note">*operator note*</string>
     <string name="enter_note">enter note</string>
+    <string name="cancel">cancel</string>
+    <string name="user_canceled">*user canceled entry*</string>
 </resources>
